<resources>
    <string name="app_name">牛会议</string>
    <string name="ok">OK</string>
    <string name="niu_conference">牛会议</string>
    <string name="channel_error_title">连接错误</string>
    <string name="connecting_to">正在连接: %1$s</string>
    <string name="connected_to_room">连接成功</string>
    <string name="reconnecting_to_room">正在重连……</string>
    <string name="null_room_token_toast">获取 room token 失败，请检查网络</string>
    <string name="room_text_hint">房间名称</string>
    <string name="join_room">会议房间</string>
    <string name="room_tips">如果没有该房间，则会自动创建，房间名仅支持 3 ~ 64 位字母、数字、_ 和 - 的组合</string>
    <string name="wrong_room_name_toast">非法房间名，仅支持 3 ~ 64 位字母、数字、_ 和 - 的组合 ！</string>
    <string name="null_room_name_toast">房间名不能为空！！！</string>
    <string name="user_name_text_hint">输入昵称</string>
    <string name="save_user_name">保存昵称</string>
    <string name="user_name_tips">昵称仅支持 3 ~ 50 位字母、数字、_ 和 - 的组合</string>
    <string name="wrong_user_name_toast">非法昵称，仅支持 3 ~ 50 位字母、数字、_ 和 - 的组合 ！</string>
    <string name="null_user_name_toast">昵称不能为空！！！</string>
    <string name="codec_hw">硬编</string>
    <string name="codec_sw">软编</string>
    <string name="low_sample_rate_string">16K</string>
    <string name="high_sample_rate_string">48K</string>
    <string name="maintain_resolution_yes">分辨率固定</string>
    <string name="maintain_resolution_no">分辨率自适应</string>
    <string name="kicked_by_admin">您被管理员踢出房间！！！</string>
    <string name="version_code">版本号：%1$s, 编译时间：%2$s\nSDK: %3$s</string>
    <string name="log_text"> userId: %1$s\nfps: %2$d\nvideo bitrate: %3$d kbps\naudio bitrate: %4$d kbps\nvideo packet loss rate: %5$d%%\naudio packet loss rate: %6$d%%\nresolution: %7$d x %8$d </string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>
    <string name="android_auto_update_dialog_title">发现新版本</string>
    <string name="updating">正在更新</string>
    <string name="positive_dialog_tips">确定</string>
    <string name="negative_dialog_tips">取消</string>
    <string name="kickout_tips">确定要踢出 %1$s 这个用户吗？</string>
    <string name="screen_capture">屏幕采集</string>
    <string name="camera_capture">视频通话</string>
    <string name="audio_capture">音频通话</string>
    <string name="muti_track">视频通话 + 屏幕共享</string>
    <string name="capture_tips">屏幕采集要求 Android 5.0+ 以及硬编</string>
    <string name="join_live">观看直播</string>
    <string name="live_tips">只有 admin 才有合流权限</string>
    <string name="live_publish_url">推流地址</string>

    <string name="streaming_enable">开启合流转推</string>
    <string name="custom_mergejob">自定义合流任务</string>
    <string name="video_camera">相机流设置</string>
    <string name="video_screen">屏幕流设置</string>
    <string name="publish_url_title">推流地址(必选)：</string>
    <string name="publish_url">rtmp://pili-publish.qnsdk.com/sdk-live/%1$s?serialnum=%2$d</string>
    <string name="merge_job_tips">每个用户的合流配置都需单独确认才可生效，否则会被重置</string>

    <string name="merge_job_btn_text">合流转推</string>
    <string name="forward_job_btn_text">单流转推</string>
    <string name="stop_forward_job_text">停止转推</string>

    <string name="create_forward_job_warning">请使用自定义合流任务或者停止默认合流任务！</string>
    <string name="create_merge_job_warning">请使用自定义合流任务或者停止单路转推！</string>
</resources>
