<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_niu" />

    <ImageButton
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/back"
        android:background="@color/backgroundColor"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickBack" />

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_edit_text_background"
        android:layout_below="@id/setting_btn"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/tips_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_edit_text"
        android:layout_alignStart="@id/user_name_edit_text"
        android:layout_alignEnd="@id/user_name_edit_text"
        android:text="@string/user_name_tips"
        android:textColor="@color/textColor"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <RelativeLayout
        android:id="@+id/config_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tips_text_view"
        android:background="@drawable/oval_edit_text_background"
        android:onClick="onClickConfigParams"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/config_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/textColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_down"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/codec_mode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/config_spinner"
        android:background="@drawable/oval_edit_text_background"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/sw_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/blue"
            android:text="@string/sw"
            android:textColor="@color/textColor" />
        <RadioButton
            android:id="@+id/hw_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hw"
            android:textColor="@color/textColor" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/capture_mode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/codec_mode_button"
        android:background="@drawable/oval_edit_text_background"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/camera_capture_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@color/blue"
            android:checked="true"
            android:text="@string/camera_capture"
            android:textColor="@color/textColor" />
        <RadioButton
            android:id="@+id/screen_capture_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/screen_capture"
            android:textColor="@color/textColor" />
    </RadioGroup>

    <TextView
        android:id="@+id/tips_capture_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/capture_mode_button"
        android:layout_alignStart="@id/user_name_edit_text"
        android:layout_alignEnd="@id/user_name_edit_text"
        android:text="@string/capture_tips"
        android:textColor="@color/textColor"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <EditText
        android:id="@+id/app_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_edit_text_background"
        android:layout_below="@id/tips_capture_view"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="修改APP_ID"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_id_edit_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:onClick="onClickSaveConfiguration"
        android:background="@drawable/oval_btn_background"
        android:gravity="center"
        android:text="保存"
        android:textColor="@color/textColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/version_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/versionCodeColor"
        android:layout_marginBottom="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/version_code"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true">
        <View
            android:id="@+id/dividing_line"
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:layout_margin="8dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/dividing_line"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_niu_logo"
            android:layout_margin="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dividing_line"
            android:layout_centerVertical="true"
            android:text="@string/niu_conference"
            android:textColor="@color/white"
            android:layout_margin="8dp" />
    </RelativeLayout>

</RelativeLayout>
